--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/bolognese.html">Bolognese</a>
+        <ul>
+            <li><a href="recipes/bolognese.html">Bolognese</a></li>
 
+
+
+
+
+
+            </ul>
     </body>
 </html>
