--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>Odin Recipes</title>
 
 
     </head>
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="recipes/bolognese.html">Bolognese</a></li>
+            <li><a href="recipes/bolognese.html">Pork Sausage Bolognese with Chedar Biscuit</a></li>
+            <li><a href="recipes/friedrice.html">Island-Style Fried Rice</a></li>
 
 
 
