--- a/recipes/bolognese.html
+++ b/recipes/bolognese.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <title>
+            Pork Sausage Bolognese with Cheddar Biscuit Recipe
+        </title>
 
 
     </head>
