--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="recipes/bolognese.html">Pork Sausage Bolognese with Chedar Biscuit</a></li>
             <li><a href="recipes/friedrice.html">Island-Style Fried Rice</a></li>
+            <li><a href="recipes/psalad.html">Potato Salad</a></li>
 
 
 
