--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -5,6 +5,7 @@
         <title>
             Island-Style Fried Rice Recipe
         </title>
+        <link rel="stylesheet" href="styles.css">
 
 
     </head>
@@ -36,6 +37,8 @@
             <li>Heat 2 teaspoons of oil in a skillet over medium heat, and brown the luncheon meat and sausage. Set aside, and pour the beaten eggs into the hot skillet. Scramble the eggs, and set aside.</li>
             <li>Heat 2 tablespoons of oil in a large nonstick skillet over medium heat, and stir in the rice. Toss the rice with the hot oil until heated through and beginning to brown, about 2 minutes. Add the garlic powder, toss the rice for 1 more minute to develop the garlic taste, and stir in the luncheon meat, sausage, scrambled eggs, pineapple, and oyster sauce. Cook and stir until the oyster sauce coats the rice and other ingredients, 2 to 3 minutes, stir in the green onions, and serve.</li>
         </ol>
+
+        <a href="../index.html">Back</a>
 
 
     </body>
