--- a/recipes/psalad.html
+++ b/recipes/psalad.html
@@ -5,6 +5,7 @@
         <title>
             Potato Salad Recipe
         </title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Potato Salad</h1>
@@ -31,6 +32,8 @@
             <li>Place potatoes into a large pot and cover with salted water; bring to a boil. Reduce heat to medium-low and simmer until tender, about 10 minutes. Drain. Return potatoes to empty pot to dry while you mix the dressing. Sprinkle with salt.</li>
             <li>Stir mayonnaise, pickles, hard-cooked eggs, red onion, celery, mustard, cider vinegar, 1 teaspoon salt, and pepper together in a large bowl. Fold potatoes into the mayonnaise mixture. Allow to chill at least six hours, or overnight, before serving.</li>
         </ol>
+
+        <a href="../index.html">Back</a>
 
     </body>
 </html>
